quiz module view and values

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="colorTextQuiz">#3F51B5</color>
+    <color name="colorTextQuiz">#FFFFFF</color>
+    <color name="colorSpinner">#FFFFFF</color>
 
 
 </resources>
