--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,4 +17,28 @@
         <item>14</item>
         <item>15</item>
     </string-array>
+
+    <string-array name="answer_3" >
+        <item>Dos veces al día</item>
+        <item>Todos los dias</item>
+        <item>Día por medio</item>
+        <item>De vez en cuando</item>
+    </string-array>
+
+    <string-array name="answer_5" >
+        <item>Todos los dias</item>
+        <item>Día por medio</item>
+        <item>Una vez a la semana</item>
+        <item>De vez en cuando</item>
+        <item>No tengo auto</item>
+    </string-array>
+
+    <string-array name="answer_7" >
+        <item>Todos los dias</item>
+        <item>Día por medio</item>
+        <item>Una vez a la semana</item>
+        <item>De vez en cuando</item>
+        <item>No tengo Jardin</item>
+    </string-array>
+
 </resources>
