--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,8 @@
     <dimen name="margin_tittle">3dp</dimen>
     <dimen name="button_height">80dp</dimen>
     <dimen name="image_height">50dp</dimen>
+    <dimen name="spinner_height">40dp</dimen>
+
 
 
 </resources>
