--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_principal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.project.yaku.MainActivity">
+    tools:context=".presentation.view.Main.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:id="@+id/view">
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/main_toolbar" />
+    </android.support.design.widget.AppBarLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:layout_marginBottom="65dp"
+        android:background="@color/colorWhite"
+        android:id="@+id/principal_viewPager">
+
+    </android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/principal_tabLayout"
+        android:background="@color/colorWhite"
+        android:textColor="@color/colorGray"
+        app:tabMode="fixed"
+        android:clickable="true"
+        app:tabGravity="fill"
+        android:elevation="6dp"
+        android:scrollIndicators="bottom"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabTextColor="@color/colorGray"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:tabIndicatorColor="@color/colorPrimary"
+        app:tabTextAppearance="?android:attr/textAppearanceSmall"
+        android:layout_alignParentEnd="true"
+        >
+    </android.support.design.widget.TabLayout>
+</RelativeLayout>
