--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,15 +17,39 @@
             layout="@layout/main_toolbar" />
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:layout_marginBottom="65dp"
-        android:background="@color/colorWhite"
-        android:id="@+id/principal_viewPager">
+        android:layout_height="wrap_content">
 
-    </android.support.v4.view.ViewPager>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/principal_viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="65dp"
+            android:layout_marginTop="55dp"
+            android:background="@color/colorWhite">
+
+        </android.support.v4.view.ViewPager>
+
+        <ProgressBar
+            android:id="@+id/main.progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:clickable="true"
+            app:fabSize="normal"
+            android:layout_marginRight="@dimen/margin_m"
+            android:layout_marginBottom="?android:attr/actionBarSize"
+            app:srcCompat="@drawable/icon_water"/>
+    </FrameLayout>
+
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
