--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,11 +11,25 @@
         android:layout_height="match_parent"
         android:background="@drawable/font_3">
 
+        <TextView
+            android:id="@+id/lbl_consume"
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top|center_horizontal"
+            android:layout_marginTop="25dp"
+            android:text="Bienvenido a \n Yaku.."
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/colorWhite"
+            android:textSize="45sp"
+            android:textStyle="bold" />
+
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="80dp"
             />
 
         <ProgressBar
