--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:visibility="gone"/>
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/main.fabTip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|bottom"
